# sesion2-franciscojgutierrez

./: pyproject.toml
M4-persistencia/notebooks/: M401_Persistencia_Ficheros_Python.ipynb  M402_mysql.ipynb  M403_mongo.ipynb  config.yaml  datos.csv  datos.pkl  mis_datos  persona.json  usuarios.xlsx  usuarios_polars.csv
