[project]
name = "sesion-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pymongo>=4.13.2",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
]
